fix: remove important from highlight background (#2082)
The `!important` modifier for the `div.highlight`
background messed up the specificity and didn't
work well with `myst_nb`. I should have updated this when we added
support for `pygments_style_dark`.

--- a/src/theme-src/css/code.css
+++ b/src/theme-src/css/code.css
@@ -1,7 +1,7 @@
 /* Code-related styles */
 
 .highlight {
-  @apply relative !bg-transparent;
+  @apply relative bg-transparent;
 
   &:hover .copy {
     @apply opacity-100;
